fix: visibility header hidden when desktop

--- a/apps/website/src/components/Layout/layout.module.scss
+++ b/apps/website/src/components/Layout/layout.module.scss
@@ -15,14 +15,6 @@
       'navigation content sidebar';
   }
 
-  [data-qx-header] {
-    grid-area: header;
-
-    @include media('>=notebook') {
-      visibility: hidden;
-    }
-  }
-
   [data-qx-navigation] {
     grid-area: navigation;
   }
