--- a/apps/website/src/components/common/Header/header.module.scss
+++ b/apps/website/src/components/common/Header/header.module.scss
@@ -1,3 +1,9 @@
+@import 'src/styles/scaffold';
+
 .qxHeader {
   height: 100px;
+
+  @include media('>=notebook') {
+    visibility: hidden;
+  }
 }
